Fix close button spacing

--- a/public/support/home.css
+++ b/public/support/home.css
@@ -226,7 +226,7 @@ a.fm-button:hover
   display: inline-block;
   height: 20px;
   margin: 2px;
-  padding: 5px 6px 17px 6px;
+  padding: 3px 6px 20px 6px;
   background-color: white;
   border: 1px solid #d1d1d1;
   color: #414141;
